--- a/views/login.ejs
+++ b/views/login.ejs
@@ -98,7 +98,7 @@
 
 
     <button class="login" type="submit">Login </button>
-    <div class="footer"><span onclick="window.location='/signup'">Signup</span><span></span></div>
+    <!-- <div class="footer"><span onclick="window.location='/signup'">Signup</span><span></span></div> -->
 </form>
   </div>
   <!-- partial -->
