added clss model and more views files

--- a/views/showoneuser.ejs
+++ b/views/showoneuser.ejs
@@ -13,6 +13,7 @@
     <h3>Email: <%= showuser.email %></h3>
     <h3>Grade: <%= showuser.grade %></h3>
     <h3>UserType: <%= showuser.userType %></h3>
+    <h3>Classes: <%= showuser.classes %></h3>
    
 
     <a href="/logout">Logout</a>
