--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -53,7 +53,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/signupTwo.css">
-    <title>Document</title>
+    <title>Signup</title>
 </head>
 <body>
     <% if (locals.messages.errors) { %>
@@ -118,17 +118,17 @@
                            </div>
 
 
-                            <div class="col-md-12 mt-3">
-                            <label class="mb-3 mr-1" for="gender">Gender: </label>
+                            <!-- <div class="col-md-12 mt-3"> -->
+                            <!-- <label class="mb-3 mr-1" for="gender">Gender: </label> -->
 
-                            <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
-                            <label class="btn btn-sm btn-outline-secondary" for="male">Male</label>
+                            <!-- <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required> -->
+                            <!-- <label class="btn btn-sm btn-outline-secondary" for="male">Male</label> -->
 
-                            <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
-                            <label class="btn btn-sm btn-outline-secondary" for="female">Female</label>
+                            <!-- <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required> -->
+                            <!-- <label class="btn btn-sm btn-outline-secondary" for="female">Female</label> -->
 
-                            <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
-                            <label class="btn btn-sm btn-outline-secondary" for="secret">Other</label>
+                            <!-- <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required> -->
+                            <!-- <label class="btn btn-sm btn-outline-secondary" for="secret">Other</label> -->
                                <!-- <div class="valid-feedback mv-up">You selected a gender!</div> -->
                                 <!-- <div class="invalid-feedback mv-up">Please select a gender!</div> -->
                             <!-- </div> -->
@@ -141,7 +141,7 @@
                   
 
                             <div class="form-button mt-3">
-                                <button type="submit" class="btn btn-primary">Register</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
                         </form>
                     </div>
