--- a/views/studentprofile.ejs
+++ b/views/studentprofile.ejs
@@ -13,6 +13,7 @@
     <h3>Email: <%= user.email %></h3>
     <h3>Grade: <%= user.grade %></h3>
     <h3>UserType: <%= user.userType %></h3>
+    <h3>Classes: <%= user.classes %></h3>
 
     <a href="/"><h3>Home</h3></a>
     <a href="/logout"><h3>Logout</h3></a>
