--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,9 +53,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post">Posts</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">About</a></li> -->
+                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post">Posts</a></li> -->
+                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li> -->
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">Login</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/signup">Signup</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="">Profile</a></li>
@@ -82,7 +82,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- Post preview-->
-                    <div class="post-preview">
+                    <!-- <div class="post-preview">
                         <a href="/post">
                             <h2 class="post-title">New this week with our students</h2>
                             <h3 class="post-subtitle"></h3>
@@ -92,22 +92,22 @@
                             <a href="#!">Start Bootstrap</a>
                             on September 24, 2022
                         </p>
-                    </div>
+                    </div> -->
                     <!-- Divider-->
-                    <hr class="my-4" />
+                    <!-- <hr class="my-4" /> -->
                     <!-- Post preview-->
-                    <div class="post-preview">
+                    <!-- <div class="post-preview">
                     <a href="/post"><h2 class="post-title">Don't forget to sign up for Senior Seminar! </h2></a>
                         <p class="post-meta">
                             Posted by
                             <a href="#!">Start Bootstrap</a>
                             on September 18, 2022
                         </p>
-                    </div>
+                    </div> -->
                     <!-- Divider-->
-                    <hr class="my-4" />
+                    <!-- <hr class="my-4" /> -->
                     <!-- Post preview-->
-                    <div class="post-preview">
+                    <!-- <div class="post-preview">
                         <a href="/post">
                             <h2 class="post-title">Science has not yet mastered prophecy</h2>
                             <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
@@ -117,11 +117,11 @@
                             <a href="#!">Start Bootstrap</a>
                             on August 24, 2022
                         </p>
-                    </div>
+                    </div> -->
                     <!-- Divider-->
-                    <hr class="my-4" />
+                    <!-- <hr class="my-4" /> -->
                     <!-- Post preview-->
-                    <div class="post-preview">
+                    <!-- <div class="post-preview">
                         <a href="/post">
                             <h2 class="post-title">Failure is not an option</h2>
                             <h3 class="post-subtitle">Many say exploration is part of our destiny, but it is actually our duty to future generations.</h3>
@@ -131,11 +131,14 @@
                             <a href="#!">Start Bootstrap</a>
                             on July 8, 2022
                         </p>
-                    </div>
+                    </div> -->
                     <!-- Divider-->
-                    <hr class="my-4" />
+                    <!-- <hr class="my-4" /> -->
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+                    <!-- buttons! -->
+                    <!-- <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div> -->
+                    <!-- <div class=""><a class="btn btn-primary text-uppercase" href="#!">Signup</a></div> -->
+                    <!-- <div class="logBtn"><a class="btn btn-primary text-uppercase" href="#!">Login</a></div> -->
                 </div>
             </div>
         </div>
@@ -170,7 +173,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
+                        <div class="small text-center text-muted fst-italic">&copy;DoPortal 2023</div>
                     </div>
                 </div>
             </div>
