--- a/views/showoneuser.ejs
+++ b/views/showoneuser.ejs
@@ -55,9 +55,13 @@
         <img src="data:image/<%=showuser.img.contentType%>;base64,
              <%=showuser.img.data.toString('base64')%>">
        </div>
+       <!-- <div>
+        <img src="data:image/<=showuser.img.contentType>;base64,
+             <=showuser.img.data.toString('base64')>">
+       </div> -->
 
             <!-- <h5> image.name </h5> -->
-            <h5><%= showuser.img %></h5>
+            <!-- <h5><= showuser.img %></h5> -->
             <!-- change to the name of that corresponds with the user schema, and targets the image -->
 
     </form>
