--- a/views/studentprofile.ejs
+++ b/views/studentprofile.ejs
@@ -33,6 +33,8 @@
        <!-- checkout Colorlib table #2 -->
        <!-- use responsive tables? To show user data on admin side? Maybe -->
        <!-- checkout #22, Table V17 -->
+       
+       <!-- Should I have an ejs page that shows every student in each class when I click on the class? -->
 
     </h3>
 
