--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2959,7 +2959,61 @@ textarea.form-control-lg {
   z-index: 3;
 }
 
+/* log button, Index page */
+
+.logBtn {
+  /* new button style added */
+  height:55px;
+  position: relative;
+  margin: 0;
+  position: absolute;
+  top: 59%;
+  left: 50%;
+   -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  /* new button style added */
+  display: inline-block;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 800;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 1rem 1.75rem;
+  font-size: 0.875rem;
+  border-radius: 0;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+
+
+
+
+/* log button Index page, ends here */
+
+
+
+
+
+
 .btn {
+  /* new button style added */
+  height:55px;
+  position: relative;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+   -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  /* new button style added */
   display: inline-block;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 800;
@@ -2980,11 +3034,11 @@ textarea.form-control-lg {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
-  .btn {
+  .btn + .logBtn {
     transition: none;
   }
 }
-.btn:hover {
+.btn:hover + .logBtn{
   color: #212529;
 }
 .btn-check:focus + .btn, .btn:focus {
