paused pfp feature

--- a/views/showoneuser.ejs
+++ b/views/showoneuser.ejs
@@ -51,10 +51,7 @@
        <input type="submit"> Update Classes </input>
        </ul>
 
-       <div>
-        <img src="data:image/<%=showuser.img.contentType%>;base64,
-             <%=showuser.img.data.toString('base64')%>">
-       </div>
+      
        <!-- <div>
         <img src="data:image/<=showuser.img.contentType>;base64,
              <=showuser.img.data.toString('base64')>">
@@ -67,6 +64,7 @@
     </form>
    <!-- Need to move up. So that it's directly across,   -->
    <!-- from the cloned classes above -->
+   <!-- there's a bug with displaying the image src, something happened with schema, or maybe the correct text wasn't saved properly. -->
 
 
 
