--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -74,11 +74,11 @@
                         <form action="/signup" method="POST" class="requires-validation" novalidate enctype="multipart/form-data">
 
                             <!-- image upload -->
-                            <div>
+                            <!-- <div>
                                 <label for="image">Upload a Profile Picture (Optional)</label>
                                 <input type="file" id="image"
                                        name="image" value="" required>
-                            </div>
+                            </div> -->
                             <div class="col-md-12"> 
                                 <!-- <h4>Username</h4> -->
                                <input class="form-control" type="text" name="userName" placeholder="UserName" required>
