--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -240,7 +240,7 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #0085A1;
+  color: #c36e07;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -6618,7 +6618,7 @@ textarea.form-control-lg {
 }
 
 .border-top {
-  border-top: 1px solid #dee2e6 !important;
+  /* border-top: 1px solid #dee2e6 !important; */
 }
 
 .border-top-0 {
