--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,8 +71,8 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                         <!-- <h1>Welcome!</h1> -->
-                        <h1> <a href="/login">Login </h1>
-                        <h1> <a href="/signup">Signup </h1>
+                        <h1> <a class="landButtons" href="/login">Login </h1>
+                        <h1> <a class="landButtons" href="/signup">Signup </h1>
                             <!-- <span class="subheading">A Blog Theme by Start Bootstrap</span> -->
                         </div>
                     </div>
