--- a/views/showoneuser.ejs
+++ b/views/showoneuser.ejs
@@ -1,79 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Clean Blog - Start Bootstrap Theme</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/bootstrap.css" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="/">DoPortal</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/admin">Admin</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/logout">Logout</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li> -->
+                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">Login</a></li> -->
+                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/signup">Signup</a></li> -->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Page Header-->
+        <header class="mastheadTwo" style="background-image: url('assets/img/about-bg.jpg')">
+            <div class="container position-relative px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="page-heading">
+                            <!-- <h1>About Me</h1> -->
+
+
+                            <body>
    
-    <h3>UserName: <%= showuser.userName %></h3>
-    <h3>First Name: <%= showuser.firstName %></h3>
-    <h3>Last Name: <%= showuser.lastName %></h3>
-    <h3>Email: <%= showuser.email %></h3>
-    <h3>Grade: <%= showuser.grade %></h3>
-    <h3>UserType: <%= showuser.userType %></h3>
-    <ul class="currClass">Classes: 
-       <% for(let i = 0; i < clss.length; i++){ %>
-       <li> Subject: <%= clss[i].name %>, </li> 
-       <!-- <li> Department: <%= clss[i].department %>, </li> 
-       <li> Grade: <%= clss[i].grade %> | </li> 
-       <li> Teacher: <%= clss[i].teacherName %> | </li> -->
-        <!--Do I need a teacherSchema for this? ^  -->
-        <!-- or to convert the objectId into a string? -->
-        <!-- Or create a separate loop?   -->
-        <!-- Teacher is attached to usertype, in the UserSchema. -->
-       <% } %>
-       </ul>
+                                <h3>UserName: <%= showuser.userName %></h3>
+                                <h3>First Name: <%= showuser.firstName %></h3>
+                                <h3>Last Name: <%= showuser.lastName %></h3>
+                                <h3>Email: <%= showuser.email %></h3>
+                                <h3>Grade: <%= showuser.grade %></h3>
+                                <h3>UserType: <%= showuser.userType %></h3>
+                                <ul class="currClass">Classes: 
+                                   <% for(let i = 0; i < clss.length; i++){ %>
+                                   <li> Subject: <%= clss[i].name %>, </li> 
+                                   <!-- <li> Department: <%= clss[i].department %>, </li> 
+                                   <li> Grade: <%= clss[i].grade %> | </li> 
+                                   <li> Teacher: <%= clss[i].teacherName %> | </li> -->
+                                    <!--Do I need a teacherSchema for this? ^  -->
+                                    <!-- or to convert the objectId into a string? -->
+                                    <!-- Or create a separate loop?   -->
+                                    <!-- Teacher is attached to usertype, in the UserSchema. -->
+                                   <% } %>
+                                   </ul>
+                            
+                            
+                            
+                            
+                            
+                                   <!-- checkboxes -->
+                            <form action="/addClasses" method="POST" class="" novalidate>
+
+                                <!-- <h5>Classes</h5> -->
+                                <ul class="checkOffClass"> 
+                                   <% for(let i = 0; i < allClasses.length; i++){
+                                    const checked = showuser.classes.find(id => id.toString() === allClasses[i]._id.toString())
+                                    %>
+                                   <input type="checkbox" <%=  checked ? 'checked' : '' %>  name="<%= allClasses[i]._id %>"><li> Subject: <%= allClasses[i].name %>, </li> 
+                            
+                                   <!-- next step, to be able to update class, without having to remove the current classes and re-add them -->
+                            
+                                   <!-- <li> Department: <%= allClasses[i].department %>, </li> 
+                                   <li> Grade: <%= allClasses[i].grade %> | </li> 
+                                   <li> Teacher: <%= allClasses[i].teacherName %> | </li> -->
+                                   <% } %>
+                                   <input type="hidden" name="studentId" value="<%=showuser._id %>">
+                                   <input type="submit"> Update Classes </input>
+                                   </ul>
+                            
+                                  
+                                   <!-- <div>
+                                    <img src="data:image/<=showuser.img.contentType>;base64,
+                                         <=showuser.img.data.toString('base64')>">
+                                   </div> -->
+                            
+                                        <!-- <h5> image.name </h5> -->
+                                        <!-- <h5><= showuser.img %></h5> -->
+                                        <!-- change to the name of that corresponds with the user schema, and targets the image -->
+                            
+                                </form>
+                               <!-- Need to move up. So that it's directly across,   -->
+                               <!-- from the cloned classes above -->
+                               <!-- there's a bug with displaying the image src, something happened with schema, or maybe the correct text wasn't saved properly. -->
+                            
+                            
+                            
+                            
+                                <!-- <a href="/logout">Logout</a>
+                                <a href="/admin">Admin</a>
+                                <a href="/">Home</a> -->
+                                
+                            
+                                <script src="js/main.js"></script>
+                            </body>
+                            
 
 
 
 
 
-       <!-- checkboxes -->
-<form action="/addClasses" method="POST" class="" novalidate>
-
-    <ul class="checkOffClass">Classes: 
-       <% for(let i = 0; i < allClasses.length; i++){
-        const checked = showuser.classes.find(id => id.toString() === allClasses[i]._id.toString())
-        %>
-       <input type="checkbox" <%=  checked ? 'checked' : '' %>  name="<%= allClasses[i]._id %>"><li> Subject: <%= allClasses[i].name %>, </li> 
-
-       <!-- next step, to be able to update class, without having to remove the current classes and re-add them -->
-
-       <!-- <li> Department: <%= allClasses[i].department %>, </li> 
-       <li> Grade: <%= allClasses[i].grade %> | </li> 
-       <li> Teacher: <%= allClasses[i].teacherName %> | </li> -->
-       <% } %>
-       <input type="hidden" name="studentId" value="<%=showuser._id %>">
-       <input type="submit"> Update Classes </input>
-       </ul>
-
-      
-       <!-- <div>
-        <img src="data:image/<=showuser.img.contentType>;base64,
-             <=showuser.img.data.toString('base64')>">
-       </div> -->
-
-            <!-- <h5> image.name </h5> -->
-            <!-- <h5><= showuser.img %></h5> -->
-            <!-- change to the name of that corresponds with the user schema, and targets the image -->
-
-    </form>
-   <!-- Need to move up. So that it's directly across,   -->
-   <!-- from the cloned classes above -->
-   <!-- there's a bug with displaying the image src, something happened with schema, or maybe the correct text wasn't saved properly. -->
 
 
 
 
-    <a href="/logout">Logout</a>
-    <a href="/admin">Admin</a>
-    <a href="/">Home</a>
-    
 
-    <script src="js/main.js"></script>
-</body>
+
+
+
+
+
+
+
+
+                            <!-- <span class="subheading">This is what I do.</span> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Main Content-->
+        <!-- <main class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                    </div>
+                </div>
+            </div>
+        </main> -->
+        <!-- Footer-->
+        <!-- <footer class="border-top">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <ul class="list-inline text-center">
+                            <li class="list-inline-item">
+                                <a href="#!">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#!">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#!">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
+                    </div>
+                </div>
+            </div>
+        </footer> -->
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="public/js/scripts.js"></script>
+    </body>
 </html>
