--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -11404,7 +11404,7 @@ header.mastheadTwo .site-heading .h1 {
 
 
 
-/* MASTHEADTHREE STARTS */
+/* MASTHEADTHREE (Admin home page) STARTS */
 
 
 header.mastheadThree {
@@ -11501,6 +11501,108 @@ header.mastheadThree .site-heading .h1 {
 
 
 
+
+
+
+
+
+
+/* MASTHEADStudent STARTS */
+
+
+
+header.mastheadStudent {
+  position: relative;
+  margin-bottom: 3rem;
+  padding-top: calc(8rem + 57px);
+  padding-bottom: 8rem;
+  background: no-repeat center center;
+  background-color: #6c757d;
+  background-size: cover;
+  background-attachment: scroll;
+}
+header.mastheadStudent:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* background-color: #212529; */
+  background-color: purple;
+  opacity: 0.5;
+}
+
+
+header.mastheadStudent .page-heading,
+header.mastheadStudent .post-heading,
+header.mastheadStudent .site-heading {
+  color: #fff;
+}
+header.mastheadStudent .page-heading,
+header.mastheadStudent .site-heading {
+  text-align: center;
+}
+header.mastheadStudent .page-heading h1, header.mastheadStudent .page-heading .h1,
+header.mastheadStudent .site-heading h1,
+header.mastheadStudent .site-heading .h1 {
+  font-size: 3rem;
+}
+header.mastheadStudent .page-heading .subheading,
+header.mastheadStudent .site-heading .subheading {
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.1;
+  display: block;
+  margin-top: 0.625rem;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+header.mastheadStudent .post-heading h1, header.mastheadStudent .post-heading .h1 {
+  font-size: 2.25rem;
+}
+header.mastheadStudent .post-heading .meta,
+header.mastheadStudent .post-heading .subheading {
+  line-height: 1.1;
+  display: block;
+}
+header.mastheadStudent .post-heading .subheading {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 0.75rem 0 2rem;
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+header.mastheadStudent .post-heading .meta {
+  font-size: 1.25rem;
+  font-weight: 300;
+  font-style: italic;
+  font-family: "Lora", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+header.mastheadStudent .post-heading .meta a {
+  color: #fff;
+}
+@media (min-width: 992px) {
+  header.mastheadStudent {
+    padding-top: 12.5rem;
+    padding-bottom: 12.5rem;
+  }
+  header.mastheadStudent .page-heading h1, header.mastheadStudent .page-heading .h1,
+header.mastheadStudent .site-heading h1,
+header.mastheadStudent .site-heading .h1 {
+    font-size: 5rem;
+  }
+  header.mastheadStudent .post-heading h1, header.mastheadStudent .post-heading .h1 {
+    font-size: 3.5rem;
+  }
+  header.mastheadStudent .post-heading .subheading {
+    font-size: 1.875rem;
+  }
+}
+
+
+
+
+
+/* MASTHEADStudent ENDS */
 
 
 
